fixed download section alignment

--- a/responsive.css
+++ b/responsive.css
@@ -136,6 +136,7 @@
         flex-direction: column;
         justify-content: space-evenly;
         margin: 0;
+        width: 95vw;
 
     }
 
